# TheAviator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.txt
shaders/: background.frag  background.vert  collision.frag  collision.vert  dbDepthMap.frag  dbDepthMap.vert  entity.frag  entity.vert  entityShadow.frag  entityShadow.vert  flare.frag  flare.vert  motionBlur.frag  motionBlur.vert  sea.frag  sea.geom  sea.vert  seaShadow.frag  seaShadow.vert  sun.frag  sun.vert  ui.frag  ui.vert  velocity.frag  velocity.vert
source/: .clang-format  CMakeLists.txt  ExampleMain.cpp  FrameResource.cpp  FrameResource.h  MathHelper.cpp  MathHelper.h  UploadBuffer.h  color.hlsl  common.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h  main.cc  main.cpp  script_manager.cpp  script_manager.h
source/base/: CMakeLists.txt  Log.cpp  Log.h  Utilities.h
source/core/: CMakeLists.txt  Geometry.cpp  Geometry.h  MainWindow.cpp  MainWindow.h  MathHelper.h  Node.cpp  Node.h  Scene.cpp  Scene.h
source/entities/: DynamicEntity.cc  DynamicEntity.h  Entity.cc  Entity.h
source/entities/gameObjects/: Airplane.cc  Airplane.h  Camera.cc  Camera.h  Light.cc  Light.h  ObstacleHolder.cc  ObstacleHolder.h  ParticleHolder.cc  ParticleHolder.h  Sky.cc  Sky.h
source/gameEngine/: Collision.cc  Collision.h  Game.cc  Game.h
source/gfx/: CMakeLists.txt  GfxContext.cpp  GfxContext.h  GfxDefines.h  PipelineStateObjects.cpp  PipelineStateObjects.h  Prerequisites.h  d3dx12.h
source/io/: MouseManager.cc  MouseManager.h  Parser.cc  Parser.h
source/maths/: Maths.cc  Maths.h  Object3D.cc  Object3D.h
source/models/: Geometry.cc  Geometry.h  Loader.cc  Loader.h  RawModel.cc  RawModel.h
source/renderEngine/: DisplayManager.cc  DisplayManager.h  Renderer.cc  Renderer.h
source/scripts/: linalg.lua  setup.lua
source/shaders/: BackgroundShader.cc  BackgroundShader.h  EntityShader.cc  EntityShader.h  ShaderProgram.cc  ShaderProgram.h  color.hlsl  main.hlsl
src/: common.h  main.cc
src/entities/: AirPlane.cc  AirPlane.h  Airplane.cc  Camera.cc  Camera.h  DynamicEntity.cc  DynamicEntity.h  Entity.cc  Entity.h  Sky.cc  Sky.h
src/entities/gameObjects/: Airplane.cc  Airplane.h  BatteryHolder.cc  BatteryHolder.h  Camera.cc  Camera.h  Light.cc  Light.h  ObstacleHolder.cc  ObstacleHolder.h  ParticleHolder.cc  ParticleHolder.h  Sky.cc  Sky.h
src/gameEngine/: Collision.cc  Collision.h  Game.cc  Game.h
src/io/: KeyboardManager.cc  KeyboardManager.h  MouseManager.cc  MouseManager.h  Parser.cc  Parser.h
src/maths/: Maths.cc  Maths.h  Object3D.cc  Object3D.h
src/models/: Geometry.cc  Geometry.h  Loader.cc  Loader.h  RawModel.cc  RawModel.h
src/renderEngine/: DisplayManager.cc  DisplayManager.h  Renderer.cc  Renderer.h
src/shaders/: BackgroundShader.cc  BackgroundShader.h  CollisionShader.cc  CollisionShader.h  DBDepthMap.cc  DBDepthMap.h  EntityShader.cc  EntityShader.h  FlareShader.cc  FlareShader.h  MotionBlurShader.cc  MotionBlurShader.h  SeaShader.cc  SeaShader.h  ShaderProgram.cc  ShaderProgram.h  ShadowShader.cc  ShadowShader.h  SunShader.cc  SunShader.h  UIShader.cc  UIShader.h  VelocityShader.cc  VelocityShader.h
src/textures/: Texture.cc  Texture.h  TextureBuilder.cc  TextureBuilder.h  TextureData.cc  TextureData.h  TextureUtils.cc  TextureUtils.h
src/utils/: Audio.cc  Audio.h  Debug.cc  Debug.h  File.cc  File.h  Maths.cc  Maths.h  Parser.cc
